# brage_telemetry

./: README.md
.github/workflows/: build.yml
firmware/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: can.rs  main.rs  positioning.rs  protocol.rs  radio.rs  sx_hal.rs  uart.rs
hardware/: 1280_modem.ioc  1280_modem.kicad_pcb  1280_modem.kicad_prl  1280_modem.kicad_pro  1280_modem.kicad_sch  fp-lib-table  sym-lib-table
hardware/lib/: DEA202450BT-1261A2.bak  DEA202450BT-1261A2.kicad_sym  LMR50410YQDBVRQ1.kicad_sym  SX1281.kicad_sym  TCAN334GDCNR.kicad_sym  TPS2116DRLR.kicad_sym  sky65383.kicad_sym  tja1462.kicad_sym  tps2121.kicad_sym
hardware/lib/dea202450bt1261.pretty/: DEA202450BT1261A2.kicad_mod
hardware/lib/sky65383.pretty/: SKY6538311.kicad_mod
hardware/lib/sx1281.pretty/: QFN50P400X400X100-25N-D.kicad_mod
hardware/lib/tcan334.pretty/: SOT65P280X145-8N.kicad_mod
hardware/lib/tja1462.pretty/: SOIC127P600X175-8N.kicad_mod
hardware/lib/tps2116.pretty/: SOTFL50P160X60-8N.kicad_mod
hardware/lib/tpsm82901.pretty/: TPSM82901SISR.kicad_mod
hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
