[package]
name = "brage-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "unstable-pac", "stm32u575cg", "time-driver-any", "memory-x", "exti"]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.1.0" }
embassy-embedded-hal = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }

micromath = "2.0.0"
log = "0.4"

radio-sx128x = { path = "./deps/radio-sx128x", features = ["defmt"] }
crc = "3.2.1"
embedded-io-async = "0.6.1"
embedded-can = "0.4.1"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "ea70b440cd1035f28c3f332a2f72d7fa42ac995d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "ea70b440cd1035f28c3f332a2f72d7fa42ac995d" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "ea70b440cd1035f28c3f332a2f72d7fa42ac995d" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "ea70b440cd1035f28c3f332a2f72d7fa42ac995d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "ea70b440cd1035f28c3f332a2f72d7fa42ac995d" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "ea70b440cd1035f28c3f332a2f72d7fa42ac995d" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "ea70b440cd1035f28c3f332a2f72d7fa42ac995d" }

[profile.release]
debug = 2
